[package]
name = "ghostreaver"
version = "0.1.0"
edition = "2024"
authors = ["NeosLab <support@neoslab.com>"]
repository = "https://github.com/neoslabx/ghostreaver"
description = "A lightweight Rust SDK and library for real-time event streaming and interaction with Solana DEX trading programs. Supports Bonk, PumpFun, PumpSwap and Raydium protocols with Yellowstone gRPC"
license = "MIT"
keywords = ["solana", "streaming", "events", "grpc", "interaction"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
base64 = "=0.22.1"
bincode = "=1.3.3"
borsh = { version = "=1.5.7", features = ["derive"] }
bs58 = "=0.5.1"
chrono = { version = "=0.4.42", features = ["clock"] }
dashmap = "=6.1.0"
env_logger = "=0.11.8"
futures = "=0.3.31"
hex = "=0.4.3"
lazy_static = "=1.5.0"
log = "=0.4.28"
maplit = "=1.0.2"
num_cpus = "=1.17.0"
once_cell = "=1.21.3"
prost-types = "=0.14.1"
rand = "0.9.2"
reqwest = { version = "=0.12.23", features = ["json", "multipart"] }
rustls = { version = "=0.23.32", features = ["ring"], default-features = false }
serde = { version = "=1.0.226", features = ["derive"] }
serde-big-array = "=0.5.1"
serde_json = "=1.0.145"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
solana-client = "=2.3.6"
solana-commitment-config = "=2.2.1"
solana-program = "=2.3.0"
solana-sdk = "=2.3.1"
solana-transaction-status = "=2.3.6"
sqlx = { version = "=0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"]}
tokio = { version = "=1.47.1", features = ["full", "rt-multi-thread", "macros", "time", "sync"] }
tonic = { version = "=0.14.2", features = ["transport", "tls-native-roots"] }
uuid = { version = "=1.18.1", features = ["v4"] }
yellowstone-grpc-client = { version = "=9.0.0" }
yellowstone-grpc-proto  = { version = "=9.0.0" }